@@ -9,21 +9,21 @@
     <record name="ftw.billboard.currency">
         <field type="plone.registry.field.TextLine">
             <title>Currency</title>
-            <description>Defines the default Currency for this Site</description>
+            <description>Defines the default currency for this site</description>
         </field>
         <value>SFr.</value>
     </record>
     <record name="ftw.billboard.decimalmark">
         <field type="plone.registry.field.TextLine">
             <title>Decimal Mark</title>
-            <description>Defines the Decimal Mark used for this Site</description>
+            <description>Defines the decimal mark used for this site</description>
         </field>
         <value>.</value>
     </record>
     <record name="ftw.billboard.thousandsseparator">
         <field type="plone.registry.field.TextLine">
-            <title>Thousandsseperator</title>
-            <description>Defines the Thousandsseperator used for this Site</description>
+            <title>Thousands separator</title>
+            <description>Defines the thousands separator used for this site</description>
         </field>
         <value>'</value>
     </record>
