@@ -5,7 +5,8 @@ CHANGELOG
 1.2.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Updated help text for price in billboard ad. Fixed english in registry.
+  [Julian Infanger]
 
 
 1.2 (2012-10-05)
